Issue #2943531 by lcontreras: Accessibility errors contrast color

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body.tao {
   background: #fff;
 }
 a {
-  color: #008eb1;
+  color: #007E9E;
   text-decoration: none;
 }
 .limiter {
